Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-14515] Code completion not working in variadic parameters position #56867

Closed
xAlien95 opened this issue Apr 21, 2021 · 2 comments
Closed
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. code completion Area → source tooling: code completion source tooling Area: IDE support, SourceKit, and other source tooling

Comments

@xAlien95
Copy link
Contributor

Previous ID SR-14515
Radar rdar://problem/76977325
Original Reporter @xAlien95
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Environment

Xcode 12.4 (12D4e)
Swift Development Snapshot 2021-04-18 (a)

Additional Detail from JIRA
Votes 0
Component/s CodeCompletion
Labels Bug
Assignee @ahoppen
Priority Medium

md5: ba02493b2dc0fe2d6ca5788a70b8d573

Issue Description:

Consider the following snippet:

func foo1(_: Int..., foo: String = "") {}
func foo2(_: Int..., foo: String) {}

func bar(x: Int) {
  foo1(x, #^COMPLETE1^#)
  foo2(x, #^COMPLETE2^#)
}

In COMPLETE1 position, completion works as expected (variable x is included the results). In COMPLETE2 position, only the foo: label is suggested.

@typesanitizer
Copy link

@swift-ci create

@ahoppen
Copy link
Contributor

ahoppen commented Apr 23, 2021

Thanks for reporting this with the reduced reproducer @xAlien95.

The issue should be fixed by #37037.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@AnthonyLatsis AnthonyLatsis added the source tooling Area: IDE support, SourceKit, and other source tooling label Feb 6, 2023
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. code completion Area → source tooling: code completion source tooling Area: IDE support, SourceKit, and other source tooling
Projects
None yet
Development

No branches or pull requests

4 participants